--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ permalink: /:title
 
 # gems and other configs
 plugins_dir: [_plugins]
-plugins: [jekyll-paginate, jekyll-feed, jekyll-seo-tag]
+plugins: [jekyll-paginate, jekyll-feed]
 feed:
   path: feed.xml
 
